--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mini-css-extract-plugin": "^1.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.2.1",
+    "prop-types": "^15.7.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
